lesson-3/Exercise-2/password-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-password
spec:
  containers:
  - name: nginx
    image: nginx:latest
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
    volumeMounts:
    - name: secret-volume
      mountPath: "/usr/share/nginx/html/password"
      subPath: password
      readOnly: true
  volumes:
  - name: secret-volume
    secret:
      secretName: db-creds
