lesson-3/Exercise-2/username-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-username
spec:
  containers:
  - name: nginx
    image: nginx:latest
    volumeMounts:
    - name: secret-volume
      mountPath: "/usr/share/nginx/html/username"
      subPath: username
      readOnly: true
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
  volumes:
  - name: secret-volume
    secret:
      secretName: db-creds
