lesson-3/Exercise-2/db-url-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-url-service
spec:
  selector:
    app: nginx-url
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
