lesson-3/Exercise-2/password-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-password-service
spec:
  selector:
    app: nginx-password
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
