lesson-3/Exercise-2/username-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-username-service
spec:
  selector:
    app: nginx-username
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
