lesson-3/Exercise-2/db-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db-creds-ingress
spec:
  rules:
  - host: mysql.services.com
    http:
      paths:
      - path: /username
        pathType: Prefix
        backend:
          service:
            name: nginx-username-service
            port:
              number: 80
      - path: /password
        pathType: Prefix
        backend:
          service:
            name: nginx-password-service
            port:
              number: 80
      - path: /url
        pathType: Prefix
        backend:
          service:
            name: nginx-url-service
            port:
              number: 80
